--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -6,7 +6,7 @@ on:
       - dev
 jobs:
   Build-and-Deploy:
-    runs-on: ubuntu-latest
+    runs-on: 35.236.219.144
     environment: dev
     steps:
       - name: build
