--- a/.github/workflows/staging-deploy.yaml
+++ b/.github/workflows/staging-deploy.yaml
@@ -9,5 +9,6 @@ jobs:
     runs-on: 35.236.219.144
     environment: staging
     steps:
+      - uses: actions/checkout@v2
       - name: build
         run: ls -la
