--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -11,5 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build
-        run: sudo ls -la && pwd
+        run: npm install 
+      - name: SSH server 
+        run: echo "${{ secrets.SSH_KEY }}" > ./key && chmod 600 ./key
+      - name: Copy build to server
+        run: scp -i ./key -r ./* aman@35.236.219.144:/var/www/html/node-dev/
+      - name: start application
+        run: ssh -i key aman@35.236.219.144 "cd /var/www/html/node-dev && pm2 start app.js"
 
