--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2 
       - name: SSH server 
-        run: echo "${{ secrets.SSH_KEY }}" > ./key && chmod 600 ./key
+        run: echo "${{ secrets.SSH_KEY }}" > ./key && chmod 600 ./key && ssh -i key aman@35.236.219.144 "cd /var/www/html/node-test/ && pm2 stop app.js && rm -rf ./*"
       - name: Copy build to server
         run: scp -i ./key -r ./* aman@35.236.219.144:/var/www/html/node-dev/
       - name: start application
